--- a/placement/pages/templates/module/header.html
+++ b/placement/pages/templates/module/header.html
@@ -20,8 +20,8 @@
             {% else %}
             <li><a href="/companies/">Companies</a></li>
             {% endif %}
-            <li><a href="/stats/">Statistics</a></li>
-            <li><a href="/about/">About Us</a></li>
+            <li><a href="/profile/">Profile</a></li>
+            <li><a href="/students/">Students DB</a></li>
 
           </ul>
 
@@ -67,10 +67,10 @@
               {% else %}
               <li><a href="/companies/">Companies</a></li>
               {% endif %}
-              <li><a href="/stats/">Statistics</a>
+              <li><a href="/profile/">Profile</a>
 
               </li>
-              <li><a href="/about/">About Us</a></li>
+              <li><a href="/students/">Students DB</a></li>
             </ul>
           </nav>
         </div>
@@ -109,10 +109,10 @@
             {% else %}
             <li><a href="/companies/">Companies</a></li>
             {% endif %}
-            <li><a href="/stats/">Statistics</a>
+            <li><a href="/profile/">Profile</a>
 
             </li>
-            <li><a href="/about/">About Us</a></li>
+            <li><a href="/students/">Students DB</a></li>
 
           </ul>
         </div>
